[project]
name = "homeassistant-connectedride"
version = "0.1.0"
description = "BMW ConnectedRide Home Assistant Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.1",
]

[dependency-groups]
dev = [
    "homeassistant>=2024.1.0",
    "homeassistant-stubs>=2024.12.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["custom_components/bmw_connected_ride"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
